fix: layout min height, testimonials align, delete scripts dir

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -473,9 +473,12 @@ button
     padding: 20px 0 20px
     overflow-y: scroll
     +r(700)
+      min-height: calc(100vh - calc(40px * 3) - 9px)
       height: auto
       padding: 10px 0
       overflow: visible
+    +r(500)
+      min-height: calc(100vh - calc(40px * 2) - 62px - 9px)
     &::-webkit-scrollbar
       width: 8px
       &-track
@@ -608,6 +611,9 @@ button
         text-align: center
         margin-top: -6px
         margin-right: 15px
+        +r(700)
+          margin-left: auto
+          margin-right: auto
         span
           font-size: 10px
           color: #2773b9
@@ -620,6 +626,8 @@ button
         height: 42px
         border: 2px solid #e6e6e6
         border-radius: 50%
+        +r(700)
+          margin-left: 15px
         &--green
           background-color: #a5d475
           border-color: #a5d475
